--- a/03-19-2022Overlay/overlay.css
+++ b/03-19-2022Overlay/overlay.css
@@ -19,7 +19,6 @@ body > * {
 }
 
 #defaultAnimation {
-    border-color: red;
     filter: drop-shadow(0px 0px 4px rgba(120, 255, 255));
     filter: drop-shadow(0px 0px 6px rgba(80, 192, 180));
     filter: drop-shadow(0px 0px 8px rgb(0, 96, 120));
@@ -28,6 +27,17 @@ body > * {
     height: 80px;
 	position: absolute;
     transform: translate(-50%,-50%);
+}
+
+#progressPercentage {
+    filter: drop-shadow(0px 0px 16px rgba(120, 255, 255));
+    font-size: 14px;
+    font-family: Titillium Web;
+    font-weight: 400;
+    color: cyan;
+	position: absolute;
+    transform: translate(-52%, 166%);
+    z-index: 2;
 }
 
 .supporterNames {
@@ -95,7 +105,7 @@ canvas {
     vertical-align: middle;
 }
 
-/* #alertUsername {
+/* #particleCanvas {
     top: 50%;
     left: 50%;
     color: white;
