--- a/03-19-2022Overlay/overlay.css
+++ b/03-19-2022Overlay/overlay.css
@@ -36,7 +36,7 @@ body > * {
     font-weight: 400;
     color: cyan;
 	position: absolute;
-    transform: translate(-50%, 166%);
+    transform: translate(-50%, 154%);
     z-index: 2;
 }
 
@@ -77,37 +77,29 @@ body > * {
     transform: translate(0%,-50%)
 }
 
-/* #progressBar {
-    position: absolute;
-    top: 0;
-    left: 0;
-} */
-
 canvas {
     position: absolute;
 }
 
-.verticalHair {
+/* .verticalHair {
     left: 50%;
     width: 1px;
     height: 1080px;
     background-color: white;
     position: absolute;
     vertical-align: middle;
-}
+} */
 
-.horizontalHair {
+/* .horizontalHair {
     top: 50%;
     width: 1920px;
     height: 1px;
     background-color: white;
     position: absolute;
     vertical-align: middle;
-}
-
-/* #particleCanvas {
-    top: 50%;
-    left: 50%;
-    color: white;
-    position: absolute;
 } */
+
+#particleCanvas {
+    font-family: 'Courier New', Courier, monospace;
+    position: absolute;
+}
