--- a/03-19-2022Overlay/overlay.css
+++ b/03-19-2022Overlay/overlay.css
@@ -9,7 +9,6 @@ body {
 	align-items: center;
 	justify-content: center;
     overflow: hidden;
-    background-color: rgb(0, 0, 0);
 }
 
 body > * {
@@ -49,7 +48,7 @@ body > * {
 .supportNumerical {
     filter: drop-shadow(1.5px 1.5px 2.5px rgba(0, 0, 0));
     margin: 0px 16px 0px 16px;
-    color:white;
+    color: white;
 }
 
 .separator {
@@ -82,13 +81,15 @@ canvas {
 }
 
 #particleCanvas {
-    font-family: 'Courier New', Courier, monospace;
     position: absolute;
+    font-size: 32px;
+	text-align: center;
+    font-family: Titillium Web;
+    filter: drop-shadow(3px 3px 6px rgba(0, 0, 0));
 }
 
-#testdiv {
-    font-family: 'Courier New', Courier, monospace;
+#testDiv {
     position: absolute;
     color: white;
-    padding-top: 192px;
+    padding: 0px 0px 128px 0px;
 }
