--- a/03-19-2022Overlay/progressBar.css
+++ b/03-19-2022Overlay/progressBar.css
@@ -23,18 +23,23 @@ body > * {
     filter: drop-shadow(0px 0px 6px rgba(80, 192, 180));
     filter: drop-shadow(0px 0px 8px rgb(0, 96, 120));
     display: inline-flex;
+    top: 50%;
+    left: 50%;
     width: 80px;
     height: 80px;
 	position: absolute;
     transform: translate(-50%, -36%);
+    z-index: -1;
 }
 
-#progressPercentage {
+#percentage {
     filter: drop-shadow(0px 0px 16px rgba(120, 255, 255));
     font-size: 14px;
     font-family: Titillium Web;
     font-weight: 400;
     color: cyan;
+    top: 50%;
+    left: 50%;
 	position: absolute;
     transform: translate(-50%, 154%);
     z-index: 2;
